# form-automation-platform

./: README.md  pyproject.toml
docs/: architecture.md
src/browser/: browser_manager.py  exceptions.py
